--- a/material-addon/src/main/webapp/VAADIN/themes/material/variables.scss
+++ b/material-addon/src/main/webapp/VAADIN/themes/material/variables.scss
@@ -47,3 +47,5 @@ $h3-fontsize: 2.0rem !default;
 $h4-fontsize: 1.5rem !default;
 $h5-fontsize: 1.2rem !default;
 $h6-fontsize: 1rem !default;
+
+$v-button-round-border-radius: 30px;
